--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bit Board</title>
+    <link rel="stylesheet" type="text/css" href="/src/global.css" />
   </head>
   <body>
     <div id="app"></div>
