--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bit Board</title>
+    <title>Bitter</title>
     <link rel="stylesheet" type="text/css" href="/src/global.css" />
   </head>
   <body>
