--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bits</title>
-    <link rel="stylesheet" type="text/css" href="src/global.css" />
+    <link rel="stylesheet" type="text/css" href="/src/global.css" />
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
