--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bits</title>
+    <title>Bitter</title>
     <link rel="stylesheet" type="text/css" href="/src/global.css" />
   </head>
   <body>
